# paris-bikes

./: .dockerignore  Dockerfile  LICENSE.md  README.md  environment.yaml  pyproject.toml
.dvc/: config
dash_app/: README.md  application.py  chloropleth.py
data/: metadata.md
data/feature/: .gitignore  feature.geojson  feature.geojson.dvc
data/primary/: .gitignore  idfm_parking.csv.dvc  iris.geojson.dvc  metro.csv.dvc  metro_rer.csv.dvc  museums.csv.dvc  museums.geojson.dvc  parking.csv.dvc  parking_idfm.csv.dvc  schools.csv.dvc  shops.csv.dvc  trains.csv.dvc
data/raw/: .gitignore  BDCOM_2020.geojson.dvc  EQUIPEMENT_PONCTUEL_ENSEIGNEMENT_EDUCATION.geojson.dvc  RECENSEMENT_IRIS_POPULATION.geojson.dvc  espaces_verts.geojson.dvc  frequentation-des-musees-de-france.csv.dvc  frequentation-gares.csv.dvc  parking-velos-ile-de-france-mobilites.csv.dvc  stationnement-voie-publique-emplacements.geojson.dvc  trafic-annuel-entrant-par-station-du-reseau-ferre-2021.csv.dvc
notebooks/: census-data.ipynb  features-pipeline.ipynb  idfm-parking.ipynb  metro-stations.ipynb  museums.ipynb  train-stations.ipynb
paris_bikes/: dash_application.py  mapping.py  pipelines.py  preprocess_data.py  utils.py
