[tool.poetry]
name = "paris-bikes"
version = "0.1.0"
description = "Develop metrics for demand of new bike parkings in the city of Paris"
authors = ["Your Name <you@example.com>"]
packages = [{include = "paris_bikes"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.12.0"
plotly = "^5.10.0"
jupyterlab = "^3.5.0"
dvc = {version = "^2.31.0", extras = ["gdrive"]}
PyDrive2 = "^1.14.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
pygeos = "^0.13"
matplotlib = "^3.6.1"
geopy = "^2.2.0"
black = "^22.10.0"
dash = "^2.7.0"
dash-bootstrap-components = "^1.2.1"
gunicorn = "^20.1.0"
Fiona = "1.8.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
